--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Practica de Git</title>
 </head>
 <body>
-    <section></section>
+    <section>
+        <h1>Hola</h1>
+    </section>
 </body>
 </html>
