feat: my complete change

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Practica de Git</title>
 </head>
 <body>
+    <title>Aprendiendoooo</title>
     <section>
         <h1>Hola</h1>
         <h2>Cambio</h2>
     </section>
+    <footer></footer>
 </body>
 </html>
