feat: lorem ipsum text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <section>
         <h1>Hola</h1>
         <h2>Cambio</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab animi exercitationem eaque officia. In recusandae asperiores soluta beatae quaerat nemo earum sequi iste quos. Officia illum corporis quas repellat nulla.
+        </p>
     </section>
     <footer></footer>
 </body>
