--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>Hola</h1>
         <h2>Cambio</h2>
     </section>
-    <footer></footer>
+    <footer>
+        <h1>Footer</h1>
+    </footer>
 </body>
 </html>
