feat: footer title

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab animi exercitationem eaque officia. In recusandae asperiores soluta beatae quaerat nemo earum sequi iste quos. Officia illum corporis quas repellat nulla.
         </p>
     </section>
-    <footer></footer>
+    <footer>
+        <h1>Footer</h1>
+    </footer>
 </body>
 </html>
