--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h1>Hola</h1>
         <h2>Cambio</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab animi exercitationem eaque officia. In recusandae asperiores soluta beatae quaerat nemo earum sequi iste quos. Officia illum corporis quas repellat nulla.
-        </p>
+            texto de mi feature</p>
     </section>
     <footer>
         <h1>Footer</h1>
